service and models

--- a/WebShope/Views/User/Login.cshtml
+++ b/WebShope/Views/User/Login.cshtml
@@ -11,6 +11,6 @@
     </p>
     <p>
         <input type="submit" value="Войти" />
-        <a asp-controller="Home" asp-action="Register">Регистрацию</a>
+        <a asp-controller="User" asp-action="Register">Регистрацию</a>
     </p>
 </form>
