--- a/WebShope/Views/User/Register.cshtml
+++ b/WebShope/Views/User/Register.cshtml
@@ -1,58 +1,62 @@
-﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@model WebShope.Domain.Models.UserRegisterViewModel
+﻿@model WebShope.Domain.Models.UserRegisterViewModel
 
-<html> 
-    <head>
-    <style>
-        .input-validation-error {
-            border-color: red;
-        }
-    </style>
-    </head>
-    <body>
-    <form method="post" asp-action="Register" asp-controller="User">
-        <p>
-            <label>Логин</label>
-                <br/>
-            <input asp-for="Login" />
-        </p>
-        <p>
-            <label> Имя</label>
-                    <br />
-                    <input asp-for="Name" />
-        </p>
-        <p>
-            <label> Фамилия</label>
-                    <br />
-                    <input asp-for="Surname" />
-        </p>
-         <p>
-            <label> Возраст</label>
-                    <br />
-                    <input type="number" asp-for="Age" />
-        </p>
-        <p>
-            <label> Email</label>
-                    <br />
-                    <input asp-for="Email" />
-        </p>
-        <p>
-            <label>Пароль</label>
-                    <br/>
-            <input asp-for="Password" />
-        </p>
-         <p>
-            <label>Подтверждение пароля</label>
-                    <br/>
-            <input asp-for="RepeatPassword" />
-        </p>
-
-        <p>
-            <input type="submit" value="Зарегистрироваться" />
-        </p>
+<div class="div-center">
+    <form enctype="multipart/form-data" method="post" asp-action="Register" asp-controller="User">
+            <p>
+                <label>Логин</label>
+                <br />
+                <input asp-for="Login" />
+                <span asp-validation-for="Login" />
+            </p>
+            <p>
+                <label> Имя</label>
+                <br />
+                <input asp-for="Name" />
+                <span asp-validation-for="Name" />
+            </p>
+            <p>
+                <label> Фамилия</label>
+                <br />
+                <input asp-for="Surname" />
+                <span asp-validation-for="Surname" />
+            </p>
+            <p>
+                <label> Возраст</label>
+                <br />
+                <input type="number" asp-for="Age" />
+                <span asp-validation-for="Age" />
+            </p>
+            <p>
+                <label> Email</label>
+                <br />
+                <input asp-for="Email" />
+                <span asp-validation-for="Email" />
+            </p>
+            <p>
+                <label>Пароль</label>
+                <br />
+                <input asp-for="Password" />
+                <span asp-validation-for="Password" />
+            </p>
+            <p>
+                <label>Подтверждение пароля</label>
+                <br />
+                <input asp-for="RepeatPassword" />
+                <span asp-validation-for="RepeatPassword" />
+            </p>
+            <p>
+                <label>Фото профиля</label>
+                <br />
+                <input type="file" asp-for="ProfileImage"  accept="image/*" />
+                <span asp-validation-for="ProfileImage"></span>
+            </p>
+            <p>
+                <input type="submit" value="Зарегистрироваться" />
+                <a asp-controller="User" asp-action="Login">Назад</a>
+            </p>
     </form>
-    </body>
-</html>
+</div>
 
-@{
-}
+    
+
+
