добавление дизайна и функционала в профиль

--- a/WebShope/Views/Profile/Index.cshtml
+++ b/WebShope/Views/Profile/Index.cshtml
@@ -6,7 +6,7 @@
 		Model.ImageUrl = "https://quo.eldiario.es/wp-content/uploads/2019/10/el-mito-de-los-culos-grandes-1280x720.jpg";
 	}
 }
-<div class="profile-redactor">
+<div class="profile-main">
 	<img src="@Model.ImageUrl" height="100" width="100" /><br />
 	<label>@Model.Name</label><br />
 	<label>@Model.Surname</label><br />
