--- a/WebShope/wwwroot/lib/Style/Styles.css
+++ b/WebShope/wwwroot/lib/Style/Styles.css
@@ -4,6 +4,15 @@
     
 }
 
+.main {
+}
+
+*{
+    margin: 0;
+    padding: 0;
+    outline: none;
+}
+
 
 .div-center {
     position: absolute;  
@@ -18,16 +27,12 @@
     overflow: auto;
 }
 
-form {
-   
-}
 
 header{
     padding-top:10px;
     width:100%;
-    margin-top:0;
     float:left;
-
+    border-bottom:2px solid silver;
 }
 
 
@@ -157,10 +162,11 @@ header{
 
 
 
-
-
 body{
-    margin:0
+    margin:0;
+    width: 100%;
+    height: 100%;
+    float: left;
 }
 
 
