--- a/WebShope/Views/Profile/_ProfileLayout.cshtml
+++ b/WebShope/Views/Profile/_ProfileLayout.cshtml
@@ -11,6 +11,8 @@
 		await Html.RenderPartialAsync("ProfileMenu/ProfileMenuPartial");
 	}
 	<script src="~/Scripts/ProfileMenuScripts.js"></script>
+	<link href="~/lib/Style/Loader.css" rel="stylesheet" />
+	
 
 	<div id="menu-content">
 		@RenderBody()
