--- a/WebShope/Views/Shared/Header/HeaderPartial.cshtml
+++ b/WebShope/Views/Shared/Header/HeaderPartial.cshtml
@@ -8,8 +8,8 @@
         </svg>
     </button>
     <div class="dropdown-content">
-        <a href="#">Главная</a>
-        <a href="#">Профиль</a>
+        <a asp-controller="Home" asp-action="Index">Главная</a>
+        <a asp-controller="Catalog" asp-action="Index">Каталог</a>
         <a href="#">Жопа</a>
     </div>
 </div>
